--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "notes":"npx ts-node ./src/app/notes/07.01.2024.ts"
   },
   "dependencies": {
     "next": "14.0.4",
