--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "notes":"npx ts-node ./src/app/notes"
+    "notes": "npx ts-node ./src/app/notes"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "json-server": "^1.0.0-alpha.22",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
